# webgpu-sandbox

./: Cargo.toml
res/: cube_normal.mtl  dae_-_bilora_bella_46_camera_-_game_ready_asset.mtl  scene.gltf
src/: app.rs  camera.rs  color_shader.wgsl  context.rs  hdr.rs  input.rs  lib.rs  light.wgsl  main.rs  model.rs  renderer.rs  resources.rs  shader.wgsl  state.rs  texture.rs  texture_shader.wgsl  ui.rs  white_shader.wgsl
src/passes/: clearpass.rs  debugpass.rs  mod.rs  opaquepass.rs  skyboxpass.rs
src/scenes/: default_scene.rs  mod.rs
src/shaders/: opaque.wgsl
wgpu-coollab/: Import d'assets.md
wgpu-coollab/.obsidian/: appearance.json  workspace.json
