[package]
name = "project"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# This is not required for WASM as wasm-opt should take care of this.
# It can also interfere with WASM builds so feel free to leave it out.
# It helps if you are wanting to build native binaries, as it helps reduce
# the size of the executable, and make it harder to reverse engineer.
[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"
tobj = { version = "3.2", default-features = false, features = ["async"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"